# SpaceshipShooter

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: engine.cpp  engine.h  main.cpp  map.cpp  map.h  ship.cpp  ship.h  shot.cpp  shot.h
